--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "nuxt": "^3.6.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.32.0",
     "@oruga-ui/oruga-next": "^0.6.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
-    "mongodb": "^5.8.1"
+    "mongodb": "^5.8.1",
+    "sharp": "^0.32.5"
   }
 }
