--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18.17.3",
-    "nuxt": "^3.6.5"
+    "nuxt": "^3.6.5",
+    "sass": "^1.66.1"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.32.0",
