--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-app",
   "private": true,
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "scripts": {
     "build": "nuxt build",
@@ -14,13 +14,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@types/node": "^18.17.3",
     "nuxt": "^3.6.5",
     "sass": "^1.66.1"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.32.0",
+    "@nuxt/ui": "^2.14.2",
     "@oruga-ui/oruga-next": "^0.6.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
     "dayjs": "^1.11.10",
