--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-app",
   "private": true,
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "scripts": {
     "build": "nuxt build",
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@types/node": "^18.17.3",
+    "@types/node": "^20.11.3",
     "nuxt": "^3.10.3",
     "sass": "^1.66.1"
   },
@@ -24,6 +24,8 @@
     "@nuxt/ui": "^2.14.2",
     "dayjs": "^1.11.10",
     "mongodb": "^5.8.1",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "xrpl": "^3.0.0",
+    "xumm": "^1.7.7"
   }
 }
