--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -35,16 +35,17 @@ jobs:
           name: node-build
           path: build/ # adjust this to the build directory of your Node application
 
-  deploy:
-    needs: build-and-deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: node-build
+      - name: Create env file from secret
+        run: |
+          echo "${{ secrets.ENV_CONTENT }}" > ./build/.env
+        shell: bash
 
-      - name: Deploy Application using Ansible
-        run: ansible-playbook -i inventory.yaml deploy_playbook.yaml -l ${{ github.event.inputs.servers_to_deploy }}
-        env:
-          ANSIBLE_HOST_KEY_CHECKING: False
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.ANSIBLE_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Securely copy build directory to remote
+        run: scp -r ./build/* ${{ secrets.ANSIBLE_SSH_USER_NAME }}@${{ DEV_TARGET_HOST }}:/etc/opt/albers
+
