--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -37,7 +37,9 @@ jobs:
 
       - name: Create env file from secret
         run: |
+          touch build/.env
           echo "${{ secrets.ENV_CONTENT }}" > build/.env
+          
         shell: bash
 
       - name: Set up SSH
