--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20' # specify your Node.js version
+          node-version: '14' # specify your Node.js version
 
       - name: Install Dependencies
         run: npm install
@@ -35,6 +35,11 @@ jobs:
           echo "${{ secrets.ANSIBLE_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
+      - name: Disable strict host key checking
+        run: echo "StrictHostKeyChecking no" >> ~/.ssh/config
+        shell: bash
+
       - name: Securely copy build directory to remote
         run: scp -i ~/.ssh/id_rsa -r .output/* ${{ secrets.ANSIBLE_SSH_USER_NAME }}@${{ secrets.DEV_TARGET_HOST }}:/etc/opt/albers
+        shell: bash
 
