--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -66,10 +66,10 @@ jobs:
 
       - name: Check if albers.app.service exists or is different
         run: |
-          if ! cmp -s albers.app.service.tmp /etc/systemd/system/albers.app.service; then
-            ssh -i ~/.ssh/id_rsa ${{ secrets.ANSIBLE_SSH_USER_NAME }}@${{ secrets.DEV_TARGET_HOST }} 'sudo mv /tmp/albers.app.service /etc/systemd/system/albers.app.service'
-            ssh -i ~/.ssh/id_rsa ${{ secrets.ANSIBLE_SSH_USER_NAME }}@${{ secrets.DEV_TARGET_HOST }} 'sudo systemctl daemon-reload'
-          fi
+            ssh -i ~/.ssh/id_rsa ${{ secrets.ANSIBLE_SSH_USER_NAME }}@${{ secrets.DEV_TARGET_HOST }} 'if ! cmp -s /tmp/albers.app.service.tmp /etc/systemd/system/albers.app.service; then
+            sudo mv /tmp/albers.app.service /etc/systemd/system/albers.app.service
+            sudo systemctl daemon-reload
+            fi'
         shell: bash
         
       - name: Archive .output directory contents
