remove os locking error

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -18,8 +18,11 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Remove package.lock
+        run: rm package-lock.json
+
+      - name: Remove node modules
+        run: rm -r node_modules
 
       - name: Build Application
         run: npm run build
