--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Remove package.lock
         run: rm package-lock.json
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Build Application
         run: npm run build
 
