--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -50,7 +50,7 @@ jobs:
 
           [Service]
           Type=simple
-          ExecStart=/usr/bin/node index.mjs
+          ExecStart=/usr/bin/node --env-file=.env index.mjs
           WorkingDirectory=/var/opt/albers/server
           EnvironmentFile=/var/opt/albers/server/.env
           KillSignal=process
