--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -53,7 +53,7 @@ jobs:
           ExecStart=/usr/bin/node --env-file=.env index.mjs
           WorkingDirectory=/var/opt/albers/server
           EnvironmentFile=/var/opt/albers/server/.env
-          KillSignal=process
+          KillSignal=SIGTERM
           User=nodejs
           Group=nodejs
           Restart=always
