--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Create env file
+        run: |
+          echo "${{ secrets.ENV_CONTENT }}" > ./.env
+        shell: bash
+
       - name: Build Application
         run: npm run build
 
