--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Create env file from secret
       # echo "${{ secrets.ENV_CONTENT }}" | base64 --decode > .output/server/.env
         run: |
-          echo "${{ secrets.ENV_CONTENT }}" > .output/server/.env
+          echo "${{ secrets.ENV_CONTENT }}" | base64 --decode > .output/server/.env
         shell: bash
 
       - name: Set up SSH
