--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Create env file
         run: |
-          echo "${{ secrets.ENV_CONTENT }}" > ./.env
+          echo "${{ secrets.ENV_CONTENT }}" | base64 --decode > ./.env
         shell: bash
 
       - name: Build Application
