--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/client-s3": "^3.32.0",
     "@nuxt/ui": "^2.14.2",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "mongodb": "^5.8.1",
     "p5": "^1.9.2",
     "sharp": "^0.32.6",
