--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "p5": "^1.9.2",
     "sharp": "^0.32.6",
     "xrpl": "^3.0.0",
-    "xumm": "^1.7.7"
+    "xumm": "^1.7.7",
+    "yup": "^1.4.0"
   }
 }
