added the token functionnality (not finished yet but it works) and changed the tsconfig.json to make it more comprehensive

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,3 +1,33 @@
 {
-  "extends": "../.nuxt/tsconfig.server.json"
+  "extends": "../.nuxt/tsconfig.server.json",
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
+    "types": ["@types/node", "@nuxt/types"]
+  },
+  "exclude": [
+    "node_modules",
+    ".nuxt",
+    "dist",
+    "**/*.js",
+    "playground-1.mongodb.js",
+    "sketches/example/index.js"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "nuxt.config.ts"
+  ]
 }
