--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/color-mode": "^3.3.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.3",
     "@types/p5": "^1.7.6",
     "nuxt": "^3.10.3",
@@ -23,9 +24,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.32.0",
+    "@nuxt/types": "^2.18.1",
     "@nuxt/ui": "^2.14.2",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.8.1",
     "p5": "^1.9.2",
     "sharp": "^0.32.6",
